# soloLTRs

./: .gitignore  Makefile  pyproject.toml
.claude/: CLAUDE.md
data/lib/: background_tes.fa  internal_only.fa  ltr_families.fa  ltr_only.fa
data/semisyn/catalogs/: arabidopsis_catalog.tsv  t2_mock_catalog.tsv
data/semisyn/eval/arabidopsis/: eval_detail.tsv  eval_summary.tsv
data/semisyn/eval/t2_mock/: eval_detail.tsv  eval_summary.tsv
data/semisyn/lib/arabidopsis/: collapsed_consensus.fa  internal_only.fa  ltr_only.fa  regions.tsv
data/semisyn/lib/t2_mock/: collapsed_consensus.fa  regions.tsv
data/semisyn/samples/arabidopsis/: manifest.json
data/semisyn/samples/t2_mock/: manifest.json
data/sim/t0/clean/: t0_clean.bed  t0_clean.fa  t0_clean.gff3  t0_clean.json
data/sim/t0/diverged/: t0_diverged.bed  t0_diverged.fa  t0_diverged.gff3  t0_diverged.json
data/sim/t0/edge_cases/: t0_edge_cases.bed  t0_edge_cases.fa  t0_edge_cases.gff3  t0_edge_cases.json
docs/: population-validation-design.md  server-validation.md
references/cossu/: expected_ratios.tsv
scripts/pipeline/: align.py  annotate.py  cli.py  config.py  depth.py  mu.py  population.py  ratio.py  search.py  search_mm2.py  tags.py  validate.py
scripts/semisyn/: build_consensus_lib.py  compose_genome.py  evaluate_semisyn.py  extract_sequences.py  merge_annotations.py  mock_catalog_from_t2.py  parse_edta.py  parse_look4ltrs.py  parse_soloLTRseeker.py  partition_samples.py  soloLTRseeker.Dockerfile
scripts/sim/: evaluate.py  make_lib.py  make_t0.py  make_t1.py  make_t2.py  utils.py
(+37 files in other folders)
