[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "soloLTRs"
version = "0.1.0"
description = "Population-scale solo LTR detection pipeline for plant genomes"
requires-python = ">=3.10"
dependencies = [
    "biopython>=1.83",
    "numpy>=1.26",
    "pandas>=2.0",
]

[project.scripts]
make-t0 = "scripts.sim.make_t0:main"
make-t1 = "scripts.sim.make_t1:main"
make-t2 = "scripts.sim.make_t2:main"
evaluate = "scripts.sim.evaluate:main"
sololtrs = "scripts.pipeline.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["scripts*"]
